--- a/lib/capistrano/templates/nginx/nginx.conf.erb
+++ b/lib/capistrano/templates/nginx/nginx.conf.erb
@@ -1,4 +1,4 @@
-upstream <%= fetch(:application) %>_puma {
+upstream <%= fetch(:application_stage) %>_puma {
   server unix:<%= fetch(:deploy_to) %>/shared/tmp/sockets/puma.sock;
 }
 
@@ -18,7 +18,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://<%= fetch(:application) %>_puma;
+    proxy_pass http://<%= fetch(:application_stage) %>_puma;
   }
 
   error_page 500 502 503 504 /500.html;
@@ -44,7 +44,7 @@ server {
     proxy_set_header   X-Forwarded-Proto https;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://<%= fetch(:application) %>_puma;
+    proxy_pass http://<%= fetch(:application_stage) %>_puma;
   }
 
   error_page 500 502 503 504 /500.html;
